--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -170,6 +170,7 @@
                             android:layout_height="wrap_content" />
                     </LinearLayout>
                     <LinearLayout
+                        android:id="@+id/ll_mine_mall"
                         android:padding="@dimen/margin_mid"
                         android:layout_weight="1"
                         android:layout_width="0dp"
