添加了设置的功能

--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -3,29 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fitsSystemWindows="true">
-    <!--<RelativeLayout
-        android:id="@+id/rl_result_top"
-        android:background="@color/main_color"
-        android:layout_width="match_parent"
-        android:layout_height="40dp">
+    android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/iv_result_back"
-            android:src="@mipmap/back"
-            android:layout_height="match_parent"
-            android:layout_width="40dp"
-            />
-        <TextView
-            android:text="搜索结果"
-            android:id="@+id/tv_buy_title"
-            android:textColor="@color/main_write"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:layout_centerInParent="true"
-            />
-    </RelativeLayout>-->
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -47,78 +26,84 @@
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:gravity="top"
-                app:contentInsetStart="0dp"
                 android:minHeight="?attr/actionBarSize"
+                app:contentInsetStart="0dp"
+                android:fitsSystemWindows="true"
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-                app:titleMarginTop="0dp" >
+                app:titleMarginTop="0dp">
 
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
+
                     <ImageView
                         android:id="@+id/iv_result_back"
-                        android:src="@mipmap/back"
-                        android:layout_height="match_parent"
                         android:layout_width="40dp"
-                        />
+                        android:layout_height="match_parent"
+                        android:src="@mipmap/back" />
+
                     <TextView
-                        android:text="搜索结果"
                         android:id="@+id/tv_buy_title"
-                        android:textColor="@color/main_write"
-                        android:layout_height="wrap_content"
                         android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:layout_centerInParent="true"
-                        />
+                        android:text="搜索结果"
+                        android:textColor="@color/main_write" />
                 </RelativeLayout>
             </android.support.v7.widget.Toolbar>
 
             <RadioGroup
-                android:layout_gravity="bottom"
-                android:orientation="horizontal"
                 android:id="@+id/rv_result_filter"
-                android:layout_below="@+id/rl_result_top"
                 android:layout_width="match_parent"
-                android:layout_height="40dp">
+                android:layout_height="40dp"
+                android:layout_below="@+id/rl_result_top"
+                android:layout_gravity="bottom"
+                android:orientation="horizontal">
+
                 <RadioButton
                     android:id="@+id/rb_result_filter_standard"
 
-                    android:text="默认排序"
-                    android:gravity="center"
-                    android:layout_weight="1"
                     android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
                     android:background="@drawable/select_filter"
                     android:button="@null"
-                    android:layout_height="match_parent" />
+                    android:gravity="center"
+                    android:text="默认排序" />
+
                 <RadioButton
                     android:id="@+id/rb_result_filter_price"
 
-                    android:text="价格优先"
-                    android:gravity="center"
-                    android:button="@null"
-                    android:layout_weight="1"
                     android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
                     android:background="@drawable/select_filter"
-                    android:layout_height="match_parent" />
+                    android:button="@null"
+                    android:gravity="center"
+                    android:text="价格优先" />
+
                 <RadioButton
                     android:id="@+id/rb_result_filter_many"
-                    android:text="销量优先"
-                    android:gravity="center"
-                    android:layout_weight="1"
                     android:layout_width="0dp"
-                    android:button="@null"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
                     android:background="@drawable/select_filter"
-                    android:layout_height="match_parent" />
+                    android:button="@null"
+                    android:gravity="center"
+                    android:text="销量优先" />
             </RadioGroup>
 
         </android.support.design.widget.CollapsingToolbarLayout>
 
     </android.support.design.widget.AppBarLayout>
+
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/sf_result_refresh"
-        android:layout_below="@+id/rv_result_filter"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_below="@+id/rv_result_filter"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_result_show"
             android:layout_width="match_parent"
@@ -126,5 +111,5 @@
 
         </android.support.v7.widget.RecyclerView>
     </android.support.v4.widget.SwipeRefreshLayout>
-
+õ
 </android.support.design.widget.CoordinatorLayout>
