--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -104,7 +104,7 @@
 
             </RelativeLayout>
 
-            <LinearLayout
+            <!--<LinearLayout
                 android:id="@+id/ll_mine_shares"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -215,13 +215,13 @@
                     </LinearLayout>
                 </LinearLayout>
 
-            </LinearLayout>
+            </LinearLayout>-->
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/ll_mine_shares"
-                android:layout_marginTop="@dimen/margin_max_50"
+                android:layout_below="@+id/rl_mine_info"
+                android:layout_marginTop="@dimen/margin_20"
                 android:background="@color/main_write"
                 android:orientation="vertical">
 
@@ -265,6 +265,27 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
+
+                    <LinearLayout
+                        android:id="@+id/ll_mine_share"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:orientation="vertical"
+                        android:padding="@dimen/margin_mid">
+
+                        <ImageView
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
+                            android:src="@mipmap/gift" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="@dimen/margin_min"
+                            android:text="推荐给好友" />
+                    </LinearLayout>
 
                     <LinearLayout
                         android:id="@+id/ll_mine_at_me_use"
