屏蔽了抽奖

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="main_gray_e">#eeeeee</color>
     <color name="main_gray">#cccccc</color>
     <color name="main_orange">#FEB016</color>
+    <color name="main_black">#181819</color>
 </resources>
