--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,21 +7,21 @@
 
     <TextView
         android:id="@+id/tv_splash_jump"
-        android:text="跳过此页》》"
-        android:textColor="@color/main_write"
-        android:padding="@dimen/margin_max"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
-        android:textSize="@dimen/text_mid"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:padding="@dimen/margin_max"
+        android:text="跳过此页》》"
+        android:textColor="@color/main_write"
+        android:textSize="@dimen/text_mid" />
 
     <ImageView
-        android:src="@drawable/test"
-        android:scaleType="fitXY"
+        android:id="@+id/imageView2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
-        android:id="@+id/imageView2" />
+        android:layout_alignParentTop="true"
+        android:scaleType="fitXY"
+        android:src="@drawable/app_start" />
 </RelativeLayout>
