--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -5,53 +5,58 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     tools:context="com.example.taogegou.ui_second.SearchActivity">
+
     <RelativeLayout
         android:id="@+id/rl_search_top"
-        android:background="@color/main_color"
         android:layout_width="match_parent"
-        android:layout_height="40dp">
+        android:layout_height="40dp"
+        android:background="@color/main_color">
+
         <ImageView
             android:id="@+id/iv_search_back"
-            android:src="@mipmap/back"
-            android:layout_height="match_parent"
             android:layout_width="40dp"
-            />
+            android:layout_height="match_parent"
+            android:src="@mipmap/back" />
+
         <EditText
             android:id="@+id/et_search_write"
-            android:layout_toRightOf="@+id/iv_search_back"
-            android:maxLength="16"
-            android:textSize="@dimen/text_mid"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:layout_centerVertical="true"
             android:layout_marginLeft="@dimen/margin_mid"
             android:layout_marginRight="@dimen/margin_max_50"
-            android:background="@color/main_write"
-            android:layout_centerVertical="true"
-            android:layout_width="match_parent"
-            android:layout_height="30dp" />
+            android:layout_toRightOf="@+id/iv_search_back"
+            android:background="@drawable/search_back"
+            android:maxLength="16"
+            android:textSize="@dimen/text_mid" />
+
         <ImageView
             android:id="@+id/iv_search_go"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="@dimen/margin_max"
             android:layout_marginRight="@dimen/margin_min"
             android:padding="@dimen/margin_min"
-            android:layout_alignParentEnd="true"
-            android:layout_marginLeft="@dimen/margin_max"
-            android:layout_centerVertical="true"
-            android:src="@drawable/serach"
-            android:layout_width="40dp"
-            android:layout_height="40dp" />
+            android:src="@drawable/serach" />
     </RelativeLayout>
+
     <TextView
         android:id="@+id/tv_search_hot"
-        android:padding="@dimen/margin_mid"
-        android:layout_below="@+id/rl_search_top"
-        android:text="热门搜索"
-        android:textColor="@color/main_color"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/rl_search_top"
+        android:padding="@dimen/margin_mid"
+        android:text="热门搜索"
+        android:textColor="@color/main_color" />
+
     <com.example.taogegou.custom.MyRelativeLayout
         android:id="@+id/mr_search_content"
-        android:layout_margin="@dimen/margin_mid"
-        android:layout_below="@+id/tv_search_hot"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_below="@+id/tv_search_hot"
+        android:layout_margin="@dimen/margin_mid">
 
     </com.example.taogegou.custom.MyRelativeLayout>
 </RelativeLayout>
