--- a/app/src/main/res/layout/item_fragment_shop.xml
+++ b/app/src/main/res/layout/item_fragment_shop.xml
@@ -100,6 +100,7 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/item_shop_tv_is_tmall"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="淘宝" />
